2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-story-count): New
	internal constant.
	(shimbun-slashdot-jp-make-headers): The action when range is not
	set is changed.  Search old stories.
	(shimbun-index-url): Removed.
	(shimbun-slashdot-jp-make-story-headers): Change argument spec.
	Refer the above constant to decide the URL of the index page.
	(shimbun-slashdot-jp-search-comment-head): Ignore a garbage line
	between author and date.

2002-03-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-find-file): Decode even in the read-only buffer.

2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-lump.el (shimbun-get-group-header-alist): Add the 2nd
	optional argument.
	(shimbun-headers): Call the above function with the 2nd argument.

	* shimbun/sb-wired.el (shimbun-get-group-header-alist): Ignore the
	2nd optional argument.

	* shimbun/sb-slashdot-jp.el: Inherit sb-lump.el.
	(shimbun-headers): Abolished.
	(shimbun-get-group-header-alist): New method.
	(shimbun-slashdot-jp-make-headers): New function.

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents): Bind
	`case-fold-search' to t locally.
	(shimbun-headers): Ditto.

2002-03-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-goto-folder): Follow up
	changes of Mew 3.x.

2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-threshold):
	Change its customize spec.
	(shimbun-slashdot-jp-sid-url): Follow the above change.
	(shimbun-headers): Ditto.
	(shimbun-slashdot-jp-make-comment-headers): Reverse order.
	(shimbun-slashdot-jp-parse-date-string): Fix.

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents): Follow the
	argument spec change of `shimbun-slashdot-jp-make-story-article'.
	(shimbun-slashdot-jp-make-story-article): Not accept the 2nd
	argument.  Use `shimbun-header-xref' instead of